--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
+    <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Order summary card</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -27,34 +27,40 @@
   </head>
   <body>
     <div class="main">
-      <div class="heading-info">
-        <h1>Order Summary</h1>
-        <p>
-          You can now listen to millions of songs, audiobooks, and podcasts on
-          any device anywhere you like!
-        </p>
-      </div>
+      <div class="main-content">
+        <img
+          class="hero-img"
+          src="./images/illustration-hero.svg"
+          alt="hero-img"
+        />
+        <div class="background">
+          <div class="heading-info">
+            <h1>Order Summary</h1>
+            <p>
+              You can now listen to millions of songs, audiobooks, and podcasts
+              on any device anywhere you like!
+            </p>
+          </div>
 
-      <div class="annual-info">
-        <p>Annual Plan</p>
-        <p>$59.99/year</p>
-        <p>Change</p>
-      </div>
+          <div class="annual-info">
+            <p>Annual Plan</p>
+            <p>$59.99/year</p>
+            <p>Change</p>
+          </div>
 
-     <button class="proceed">
-      Proceed to Payment
-     </button>
-      
-     <button class="cancel">
-      Cancel Order
-     </button>
+          <button class="proceed">Proceed to Payment</button>
+
+          <button class="cancel">Cancel Order</button>
+        </div>
+      </div>
     </div>
 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/Fraigoza200">Francisco Raigoza</a>.
+      >. Coded by
+      <a href="https://github.com/Fraigoza200">Francisco Raigoza</a>.
     </div>
   </body>
 </html>
