--- a/index.html
+++ b/index.html
@@ -26,35 +26,32 @@
     </style>
   </head>
   <body>
-    <div class="main">
-      <div class="main-content">
-        <img
-          class="hero-img"
-          src="./images/illustration-hero.svg"
-          alt="hero-img"
-        />
-        <div class="background">
-          <div class="heading-info">
-            <h1>Order Summary</h1>
-            <p>
-              You can now listen to millions of songs, audiobooks, and podcasts
-              on any device anywhere you like!
-            </p>
+    <div class="container">
+      <div class="hero">
+        <img src="https://www.digitshack.com/codepen/mentor1/illustration-hero.svg" alt="">
+      </div>
+      <div class="text-content">
+        <h2 class="title">
+          Order Summary
+        </h2>
+        <p class="subtitle">
+          You can now listen to millions of songs, audiobooks, and podcasts on any
+          device anywhere you like!
+        </p>
+        <div class="plan-box">
+          <div class="plan-box-left">
+            <img src="https://www.digitshack.com/codepen/mentor1/icon-music.svg" alt="">
+            <div>
+              <h5>Annual Plan</h5>
+              <p>$59.99/year</p>
+            </div>
           </div>
-
-          <div class="annual-info">
-            <p>Annual Plan</p>
-            <p>$59.99/year</p>
-            <p>Change</p>
-          </div>
-
-          <button class="proceed">Proceed to Payment</button>
-
-          <button class="cancel">Cancel Order</button>
+          <a href="#">Change</a>
         </div>
+        <a href="#" class="proceed-btn">Proceed to Payment</a>
+        <a href="#" class="cancel-btn">Cancel Order</a>
       </div>
     </div>
-
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
