--- a/index.html
+++ b/index.html
@@ -28,19 +28,23 @@
   <body>
     <div class="container">
       <div class="hero">
-        <img src="https://www.digitshack.com/codepen/mentor1/illustration-hero.svg" alt="">
+        <img
+          src="https://www.digitshack.com/codepen/mentor1/illustration-hero.svg"
+          alt=""
+        />
       </div>
       <div class="text-content">
-        <h2 class="title">
-          Order Summary
-        </h2>
+        <h2 class="title">Order Summary</h2>
         <p class="subtitle">
-          You can now listen to millions of songs, audiobooks, and podcasts on any
-          device anywhere you like!
+          You can now listen to millions of songs, audiobooks, and podcasts on
+          any device anywhere you like!
         </p>
         <div class="plan-box">
           <div class="plan-box-left">
-            <img src="https://www.digitshack.com/codepen/mentor1/icon-music.svg" alt="">
+            <img
+              src="https://www.digitshack.com/codepen/mentor1/icon-music.svg"
+              alt=""
+            />
             <div>
               <h5>Annual Plan</h5>
               <p>$59.99/year</p>
@@ -48,8 +52,12 @@
           </div>
           <a href="#">Change</a>
         </div>
-        <a href="#" class="proceed-btn">Proceed to Payment</a>
-        <a href="#" class="cancel-btn">Cancel Order</a>
+        <div class="proceed">
+          <a href="#" class="proceed-btn">Proceed to Payment</a>
+        </div>
+        <div class="cancel">
+          <a href="#" class="cancel-btn">Cancel Order</a>
+        </div>
       </div>
     </div>
     <div class="attribution">
